--- a/cTSDF/.cproject
+++ b/cTSDF/.cproject
@@ -25,6 +25,7 @@
 								<option id="gnu.cpp.compiler.exe.debug.option.debugging.level.1630003776" name="Debug Level" superClass="gnu.cpp.compiler.exe.debug.option.debugging.level" value="gnu.cpp.compiler.debugging.level.max" valueType="enumerated"/>
 								<option id="gnu.cpp.compiler.option.include.paths.1076847463" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/depthimage}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/cVoxelGrids/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/poligonise}&quot;"/>
 								</option>
 								<option id="gnu.cpp.compiler.option.other.other.138037520" name="Other flags" superClass="gnu.cpp.compiler.option.other.other" value="-c -fmessage-length=0 -std=c++11" valueType="string"/>
